
2017-11-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* pplex.l, cobc.c: removed superfluous memset to 0 after cobc_malloc
	  in listing functions
	* cobc.c, cobc.h: always store cb_source_format as enum cb_format,
	  using getopt return values for `--fixed` / `--free` instead as
	  getopt assigns an integer which is not guaranteed to be sizeof(enum)
	* cobc.c (cobc_xref_call): bug #463 - fixed memory leak in Xref code
	* cobc.c: modularized cleanup code to (cleanup_copybook_reference)
	* cobc.c: bug #463 - reset cb_current_file->copy_tail on listing setup
	* cobc.c: modularized processing of files from (main) to (process_file)
	  and separated functions (begin_setup_compiler_env),
	  (finish_setup_compiler_env), (begin_setup_internal_and_compiler_env),
	  (finish_setup_internal_env) from (main) function

2017-11-14  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c: removed artificial limit for -fmax-errors
	* cobc.c: FR #255 new command line option `-O0` (short-opt: '0') for
	  disabling optimizations (new define CB_COPT_0),
	  postpone addition for -O option group to cflags
	* tree.c (cb_int, cb_build_label): set source position for integers
	  and labels on tree creation
	* parser.y: removed position setting for integers and labels
	* parser.y (backup_current_pos, set_pos_from_backup): new functions for
	  position corrections (currently not used)
	* codegen.c (output_call), parser.y (call_body): fixing bug #462
	  don't generate static calls if ON EXCEPTION is given

2017-11-13  Ron Norman <rjn@inglenet.com>

	fixed Bug #461:
	* codegen.c: new function cb_init_codegen to clear local variables
	* cobc.c: call cb_init_codegen after releasing cob_parsemem_base or
	  cobc_mainmem_base

2017-11-12  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* tree.h, tree.c, typeck.c: removed level_redundant_error and moved
	  the only part of it that was used once to typeck.c (validate_occurs)